# DjangoMarket

./: .gitignore.py  Dockerfile  Procfile  README.md  db.sqlite3  db.sqlite3-journal  djangomarket-83c36b901f42.json  djangostaff-353114-084811499962.json  djangostaffjson.json  docker-compose.yml  my_json_key.json  parsed_currency.html  parsed_weather.html  parsed_weather_2.html  parsing_currency.py  requirements.txt
store/: Dockerfile  djangomarket-83c36b901f42.json  parsed_currency_eur.html  parsed_currency_usd.html  pyproject.toml
store/cart/: urls.py  views.py
store/coupons/: forms.py  urls.py  views.py
store/coupons/migrations/: 0001_initial.py
store/market/: admin.py  context_processors.py  forms.py  middleware.py  models.py  parsing_currency.py  serializers.py  tasks.py  urls.py  urls_api.py  views.py
store/market/migrations/: 0003_delete_categories.py  0004_reviews.py  0005_remove_reviews_product_product_reviews.py  0006_remove_product_reviews_reviews_product.py  0007_reviews_date_add.py  0008_category_product_category.py  0009_remove_product_category_category_category.py  0010_rename_category_category_products.py  0012_stocs_remove_product_count.py  0014_basket.py  0016_remove_product_time_add_alter_product_description_and_more.py  0019_delete_registration.py  0023_product_category.py  0024_alter_reviews_user.py  0026_alter_reviews_product.py  0028_remove_reviews_product_product_reviews.py  (+18 more)
store/orders/: forms.py  models.py  views.py
store/payment/: urls.py
store/shop_server/: parsed_weather.html  parsed_weather_2.html  settings.py  urls.py
(+114 files in other folders)
